--- a/index.html
+++ b/index.html
@@ -202,6 +202,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <!--Scrollreveal-->
   <script src="https://unpkg.com/scrollreveal"></script>
-  <script src="assets/JS/scrollReveal.js"></script>
+  <script src="assets/JS/main.js"></script>
 </body>
 </html>
