--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://images.pexels.com/photos/991831/pexels-photo-991831.jpeg?cs=srgb&dl=pexels-%D0%BD%D0%B0%D1%82%D0%B0%D0%BB%D1%8C%D1%8F-%D1%81%D0%B5%D0%BC%D0%B5%D0%BD%D0%BA%D0%BE%D0%B2%D0%B0-991831.jpg&fm=jpg" class="d-block w-100" alt="...">
+        <img src="assets/img/card_img-1.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="https://images.pexels.com/photos/2247894/pexels-photo-2247894.png?cs=srgb&dl=pexels-gabriel-cri%C5%9Fan-2247894.jpg&fm=jpg" class="d-block w-100" alt="...">
+        <img src="assets/img/card_img-2.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="https://images.pexels.com/photos/2034259/pexels-photo-2034259.jpeg?cs=srgb&dl=pexels-jeffrey-riley-2034259.jpg&fm=jpg" class="d-block w-100" alt="...">
+        <img src="assets/img/card_img-3.png" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
