--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       </div>
     </div>
   </nav>
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <!--
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <div class="pantalla">
       <div class="cuadro">
         <h1>
@@ -36,26 +37,87 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas sequi excepturi aliquid tempore iusto? Ad ipsum nemo deleniti, quia reiciendis blanditiis, reprehenderit numquam sequi quisquam ipsa natus provident eveniet iste?</p>
       </div>
     </div>
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/img/card_img-1.png" class="d-block w-100" alt="...">
+        <img src="assets/img/img_card_1.png" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5></h5>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam cupiditate dolore cum laborum neque fugit voluptate similique rem omnis quae velit natus autem error nostrum, architecto beatae voluptas suscipit? Fugiat.
+          </p>
+        </div>
       </div>
       <div class="carousel-item">
-        <img src="assets/img/card_img-2.png" class="d-block w-100" alt="...">
+        <img src="assets/img/img_card_2.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="assets/img/card_img-3.png" class="d-block w-100" alt="...">
+        <img src="assets/img/img_card_3.png" class="d-block w-100" alt="...">
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
-    </button>
+    </a>
   </div>
+  -->
+  <div id="carouselExampleIndicators" class="carousel slide bg-dark" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="assets/img/img_card_1.png" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block pr-5 pl-5 cuadro">
+          <h5>Hola, soy Manuel, un <strong> Ingeniero en Desarrollo y Gestión del software</strong></h5>
+          <p>
+            Como estudiante <strong>dual</strong> de la <strong>Universidad Tecnológica de Tecámac</strong>, pude desarrollar y pulir
+            conocimientos en estas áreas, colabore en algunas empresas en desarrollo de distintas aplicaciones, principalmente web.
+          </p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/img/img_card_3.png" alt="First slide">
+        <div class="carousel-caption d-none d-md-block pl-5 pr-5 cuadro">
+          <p>
+            En estas empresas aprendí como es que se <strong>trabaja en equipo</strong>. Desarrollé habilidades tanto técnicas como de <strong>comunicación</strong>
+            y <strong>liderazgo</strong>, tuve la oportunidad de liderar un equipo de desarrollo de software.
+          </p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/img/tec_frame.png" alt="Second slide">
+        <div class="carousel-caption d-none d-md-block pr-5 pl-5 cuadro">
+          <h5></h5>
+          <p>
+            Mi experiencia en el desarrollo de software es de 2 años a lo largo de ese tiempo he trabajado principalmente con estas tecnologías, sobre todo <strong>Laravel</strong> y algunas de sus librerías más conocidas
+            como son:
+            <hr>
+            Spatie, Jetstream, Fortify entre otras.
+          </p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
   <div id="mensaje" class="bg-dark text-center breadcrum">
     <div class="container-fluid">
       <div class="row">
@@ -121,11 +183,11 @@
     <div class="container-fluid">
       <div class="row p-3 d-flex align-items-center bg-dark">
         <div class="col-sm-12 col-md-7 col-lg-6">
-          <iframe src="https://www.youtube.com/embed/ce0LPDPV5NE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="948" height="533" src="https://www.youtube.com/embed/_3hbCU7H8WY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="col-sm-12 col-md-5 col-lg-6 text-white">
-          <h2>Video antes de adoptar</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit voluptas et cumque culpa excepturi sed modi saepe optio. Praesentium quo laudantium id. Modi necessitatibus explicabo odio incidunt hic, reiciendis sint maxime, minus velit, debitis officia laborum! Perferendis illum nam, recusandae quia rem, ipsa tenetur veniam vitae quas quam, pariatur illo.</p>
+          <h2>Me gusta exponer temas interesantes</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ea praesentium cumque veniam et necessitatibus, natus similique in sed voluptate sunt tenetur! Corrupti distinctio laboriosam quisquam asperiores reiciendis? Enim nostrum optio et quae, neque deleniti beatae ipsa id illo omnis reprehenderit quos temporibus consequatur laudantium fugit, maiores porro? Atque, blanditiis!.</p>
         </div>
       </div>
     </div>
